# root_painter

./: .openhands  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE.md  MIGRATION_NOTES.md  README.md  docs_migration_plan.md  flake.nix  flake.nix.bak  index.html  mkdocs.yml  nuitka.help  pyproject.toml  pyproject.toml.bak  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_osx.yml  build_ubuntu_20.yml  build_ubuntu_22.yml  build_windows.yml  test.yml
FAQ/: index.html
developer/painter/: index.html
developer/testing/: index.html
developer/trainer/: index.html
docs/: faq.md  index.md  quickstart.md  server_setup_local.md
docs/dev/: painter_icons_readme.md  trainer_tests_readme.md
docs/developer/: painter.md  testing.md  trainer.md
docs/setup/: diku_cluster.md  local_server.md  remote_server_sshfs.md  windows_trainer.md
docs/tutorials/: cxr_lung.md
faq/: index.html
getting-started/quickstart/: index.html
painter/: migration_plan.md  migration_progress.md  pyproject.toml
painter/root_painter/: assign_corrections.py  base_extract.py  convert_seg.py  create_dataset.py  create_project.py  extract_comp.py  extract_count.py  extract_length.py  extract_regions.py  main.py  mask_images.py  plot_seg_metrics.py  random_split.py  resize_images.py  root_painter.py  segment_folder.py
painter/scripts/: export_icons.py  make_deb_file  run_pyinstaller.py
painter/scripts/assets/: DEBIAN_control  Installer.nsi
painter/src/main/python/: segment_folder.py
painter/src/painter/: __init__.py
painter/src/root_painter/: __init__.py  __main__.py  about.py  assign_corrections.py  base_extract.py  controls_dialog.py  convert_seg.py  create_dataset.py  create_project.py  eccentricity.py  extract_comp.py  extract_count.py  extract_length.py  extract_regions.py  file_utils.py  graphics_scene.py  graphics_view.py  im_utils.py  im_viewer.py  instructions.py  interaction_time.py  main.py  mask_images.py  name_edit_widget.py  nav.py  palette.py  plot_seg_metrics.py  progress_widget.py  qt_compat.py  random_split.py  resize_images.py  root_painter.py  segment_folder.py  visibility_widget.py
painter/src/root_painter/icons/: create_icns.sh
quickstart/: index.html
search/: search_index.json
setup/diku_cluster/: index.html
setup/local_server/: index.html
setup/remote_server_sshfs/: index.html
setup/windows_trainer/: index.html
src/root_painter_cli/: main.py
tests/: conftest.py
tests/painter/: test_app_launch.py  test_dummy.py  test_gui_nav.py  test_landing_menus.py  test_landing_ui.py  test_menu_actions.py  test_project_menu_actions.py  test_project_ui.py
trainer/: publish.sh  pyproject.toml
trainer/root_painter_trainer/: model_utils.py
trainer/src/root_painter_trainer/: __init__.py  datasets.py  elastic.py  file_utils.py  im_utils.py  loss.py  main.py  metrics.py  model_utils.py  startup.py  trainer.py  unet.py
trainer/src/root_painter_trainer/multi_epoch/: multi_epoch_loader.py
trainer/src/root_trainer/: __init__.py  datasets.py  elastic.py  im_utils.py  main.py  model_utils.py  trainer.py
trainer/tests/: conftest.py  plot_metrics.py  test_loss.py  test_unet.py  test_unet_inference.py  test_utils.py  training_benchmarks.py
tutorials/cxr_lung/: index.html
