[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material[imaging]>=9.6.17",
  "poethepoet>=0.37.0",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-qt>=4.5.0"
]

[project]
name = "root-painter"
description = "RootPainter GUI and trainer packaged as a single CLI"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = "GPL-3.0-or-later"
dependencies = ["root-painter-painter", "typer>=0.16.1"]
version = "0.1.11"

[project.optional-dependencies]
trainer = ["root-painter-trainer-jakob1379"]
# Allow users to install an alternative Qt binding (PySide6)
pyqt_backends = ["PySide6>=6.5"]

[project.scripts]
root-painter = "root_painter_cli.main:main"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == \"__main__\":",
  "if TYPE_CHECKING:",
  "@overload"
]
skip_covered = true
skip_empty = true
precision = 1
fail_under = 0

[tool.coverage.run]
branch = true
source = ["painter/src", "trainer/src", "src"]
omit = [
  "*/tests/*",
  "*/test_*",
  "*/conftest.py",
  "*/__init__.py",
  "*/__main__.py",
  "*/migrations/*",
  "*/site-packages/*"
]

[tool.poe.tasks]
# _update_deps = 'uv sync --upgrade'
_build_packages = 'uv build --all-packages'
_clean_builds = {shell = "rm -rf painter/dist trainer/dist dist || true"}
_install_pre-commit = 'pre-commit install'
_update_pre-commit = 'pre-commit autoupdate -j0'
setup = {sequence = ["_install_pre-commit"]}
update = {sequence = ["_update_pre-commit"]}
lint = 'pre-commit run --all-files'

[tool.poe.tasks.release]
help = "Clean, build all packages, and publish root after painter and trainer succeed."
sequence = [
  '_clean_builds',
  '_build_packages',
  'uv publish --index ${POE_PUBLISH_INDEX:-testpypi}'
]

[tool.pytest]
# Allow either PyQt6 or PySide6 to be used by pytest-qt. Tests should work
# with either backend; qt_compat will select PyQt6 by default but having
# pytest configured to "pyqt6" keeps CI aligned with the preferred binding.
qt_api = "pyqt6"
addopts = "--cov --cov-report=term-missing --cov-report=xml"

[tool.coverage.html]
directory = "build/coverage"

[tool.uv.build-backend]
module-name = "root_painter_cli"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
root-painter-painter = {workspace = true}
root-painter-trainer-jakob1379 = {workspace = true}

[tool.uv.workspace]
members = ["painter", "trainer"]
