[project]
name = "painter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jakob Stender Guldberg", email = "jakob1379gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
painter = "painter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
