[project]
name = ""
version = "0.0.1"
dependencies = [
    "pyqt5==5.15.7",
    "numpy==1.22.1",
    "setuptools==65.5.1",
    "natsort==8.0.2",
    "scikit-image==0.19.1",
    "pywavelets==1.2.0",
    "pillow==9.3.0",
    "scipy==1.10.0",
    "imagecodecs==2021.11.20",
    "matplotlib==3.5.2",
    "pyqtgraph==0.12.4",
    "qimage2ndarray==1.9.0",
    "humanfriendly==10.0",
]


[tool.uv]
package = false
