[project]
name = "root-trainer"
version = "0.1.0"
description = "Trainer (server component) for RootPainter"
readme = "README.txt"
authors = [
    { name = "Jakob Guldberg Aaes", email = "jakob1379@gmail.com" }
]
requires-python = ">=3.8,<3.11"
dependencies = [
    "Pillow==9.3.0",
    "imagecodecs==2021.8.26",
    "numpy==1.24.2",
    "scikit-image==0.19.3",
    "scipy==1.10.0",
    "torch==1.13.1",
    "torchvision==0.14.1",
]

[project.scripts]
start-trainer = "root_trainer.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
