[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=7.0.0"
]

[project]
name = "root-painter-trainer-jakob1379"
version = "0.2.27.1"
description = "Trainer (server component) for RootPainter"
authors = [{name = "Abraham George Smith"}]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
license = "GPL-2.0"
requires-python = ">=3.8,<3.11"
dependencies = [
  "Pillow>=9.3.0",
  "imagecodecs>=2021.11.20",
  "numpy>=1.24.2",
  "scikit-image>=0.19.3",
  "scipy>=1.10.0",
  "torch>=1.13.1",
  "torchvision>=0.14.1"
]

[project.scripts]
start-trainer = "root_painter_trainer:start"

[project.urls]
Homepage = "https://github.com/Abe404/root_painter"

[tool.uv.build-backend]
module-name = "root_painter_trainer"
